--- a/style/home/MQ.css
+++ b/style/home/MQ.css
@@ -26,6 +26,7 @@
 
   .collection__items {
     flex-direction: column;
+    left: 5rem;
   }
 
   .collection__item {
@@ -87,6 +88,7 @@
   .auctions__item {
     max-width: 25rem;
     max-height: 100%;
+    flex-wrap: wrap;
   }
 
   .collection__items {
