--- a/style/home/home-layout.css
+++ b/style/home/home-layout.css
@@ -52,7 +52,7 @@ html {
   font-size: 62.5%;
   font-family: "montserrat", "Helvetica Neue", "Helvetica";
   scroll-behavior: smooth;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 
 body {
