--- a/style/home/collection.css
+++ b/style/home/collection.css
@@ -47,25 +47,27 @@
 }
 
 .collection__img--1 {
-  min-width: 20rem;
-  min-height: 17rem;
+  width: 20rem;
+  height: 17rem;
   background-image: url(../../assets/axies-images/06_Popular\ Collection/box1/collection-item-2.jpg);
   margin: 2rem 0rem 1rem 2rem;
   background-repeat: no-repeat;
   background-position: 25% 75%;
   background-size: 25rem 40rem;
   border-radius: 3rem;
+  transition: all 0.2s linear;
 }
 
 .collection__img--2 {
   background-image: url(../../assets/axies-images/06_Popular\ Collection/box2/img-collection24.jpg);
-  min-width: 20rem;
-  min-height: 17rem;
+  width: 20rem;
+  height: 17rem;
   margin: 2rem 2rem 0rem 1rem;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   border-radius: 3rem;
+  transition: all 0.4s linear;
 }
 
 .second-row {
@@ -76,139 +78,152 @@
 }
 
 .collection__img--3 {
-  min-width: 13rem;
-  min-height: 13rem;
+  width: 13rem;
+  height: 13rem;
   background-image: url(../../assets/axies-images/06_Popular\ Collection/box1/collection-item-bottom-4.jpg);
   margin: 2rem 0rem 1rem 1.5rem;
   background-repeat: no-repeat;
   background-position: 25% 75%;
   background-size: cover;
   border-radius: 2rem;
+  transition: all 0.3s ease-in-out;
 }
 
 .collection__img--4 {
-  min-width: 13rem;
-  min-height: 13rem;
+  width: 13rem;
+  height: 13rem;
   background-image: url(../../assets/axies-images/06_Popular\ Collection/box1/collection-item-top-1.jpg);
   margin: 2rem 0rem 1rem 1rem;
   background-repeat: no-repeat;
   background-position: 25% 75%;
   background-size: cover;
   border-radius: 2rem;
+  transition: all 0.2s linear;
 }
 
 .collection__img--5 {
-  min-width: 13rem;
-  min-height: 13rem;
+  width: 13rem;
+  height: 13rem;
   background-image: url(../../assets/axies-images/06_Popular\ Collection/box1/collection-item-top-2.jpg);
   margin: 2rem 0rem 1rem 1rem;
   background-repeat: no-repeat;
   background-position: 25% 75%;
   background-size: cover;
   border-radius: 2rem;
+  transition: all 0.3s ease-in;
 }
 
 .collection__img--6 {
-  min-width: 20rem;
-  min-height: 17rem;
+  width: 20rem;
+  height: 17rem;
   background-image: url(../../assets/axies-images/06_Popular\ Collection/box2/img-collection11.jpg);
   margin: 2rem 0rem 1rem 2rem;
   background-repeat: no-repeat;
   background-position: 25% 75%;
   background-size: cover;
   border-radius: 3rem;
+  transition: all 0.2s linear;
 }
 
 .collection__img--7 {
   background-image: url(../../assets/axies-images/06_Popular\ Collection/box3/img-collection17.jpg);
-  min-width: 20rem;
-  min-height: 17rem;
+  width: 20rem;
+  height: 17rem;
   margin: 2rem 2rem 0rem 1rem;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   border-radius: 3rem;
+  transition: all 0.4s linear;
 }
 
 .collection__img--8 {
-  min-width: 13rem;
-  min-height: 13rem;
+  width: 13rem;
+  height: 13rem;
   background-image: url(../../assets/axies-images/06_Popular\ Collection/box2/img-collection10.jpg);
   margin: 2rem 0rem 1rem 1.5rem;
   background-repeat: no-repeat;
   background-position: 25% 75%;
   background-size: cover;
   border-radius: 2rem;
+  transition: all 0.3s linear;
 }
 .collection__img--9 {
-  min-width: 13rem;
-  min-height: 13rem;
-  background-image: url(../../assets/axies-images/06_Popular\ Collection/box1/collection-item-top-1.jpg);
+  width: 13rem;
+  height: 13rem;
+  background-image: url(../../assets/axies-images/06_Popular\ Collection/box2/img-collection23.jpg);
   margin: 2rem 0rem 1rem 1rem;
   background-repeat: no-repeat;
   background-position: 25% 75%;
   background-size: cover;
   border-radius: 2rem;
+  transition: all 0.2s ease-out;
 }
 .collection__img--10 {
-  min-width: 13rem;
-  min-height: 13rem;
+  width: 13rem;
+  height: 13rem;
   background-image: url(../../assets/axies-images/06_Popular\ Collection/box1/collection-item-top-2.jpg);
   margin: 2rem 0rem 1rem 1rem;
   background-repeat: no-repeat;
   background-position: 25% 75%;
   background-size: cover;
   border-radius: 2rem;
+  transition: all 0.1s linear;
 }
 .collection__img--11 {
-  min-width: 20rem;
-  min-height: 17rem;
-  background-image: url(../../assets/axies-images/06_Popular\ Collection/box1/collection-item-2.jpg);
+  width: 20rem;
+  height: 17rem;
+  background-image: url(../../assets/axies-images/06_Popular\ Collection/box3/img-collection12.jpg);
   margin: 2rem 0rem 1rem 2rem;
   background-repeat: no-repeat;
-  background-position: 25% 75%;
+  background-position: 15% 20%;
   background-size: 25rem 40rem;
   border-radius: 3rem;
+  transition: all 0.3s ease-in;
 }
 .collection__img--12 {
   background-image: url(../../assets/axies-images/06_Popular\ Collection/box2/img-collection24.jpg);
-  min-width: 20rem;
-  min-height: 17rem;
+  width: 20rem;
+  height: 17rem;
   margin: 2rem 2rem 0rem 1rem;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   border-radius: 3rem;
+  transition: all 0.2s ease-in-out;
 }
 .collection__img--13 {
-  min-width: 13rem;
-  min-height: 13rem;
-  background-image: url(../../assets/axies-images/06_Popular\ Collection/box1/collection-item-bottom-4.jpg);
+  width: 13rem;
+  height: 13rem;
+  background-image: url(../../assets/axies-images/06_Popular\ Collection/box3/img-collection18.jpg);
   margin: 2rem 0rem 1rem 1.5rem;
   background-repeat: no-repeat;
   background-position: 25% 75%;
   background-size: cover;
   border-radius: 2rem;
+  transition: all 0.3s linear;
 }
 .collection__img--14 {
-  min-width: 13rem;
-  min-height: 13rem;
+  width: 13rem;
+  height: 13rem;
   background-image: url(../../assets/axies-images/06_Popular\ Collection/box1/collection-item-top-1.jpg);
   margin: 2rem 0rem 1rem 1rem;
   background-repeat: no-repeat;
   background-position: 25% 75%;
   background-size: cover;
   border-radius: 2rem;
+  transition: all 0.5s linear;
 }
 .collection__img--15 {
-  min-width: 13rem;
-  min-height: 13rem;
-  background-image: url(../../assets/axies-images/06_Popular\ Collection/box1/collection-item-top-2.jpg);
+  width: 13rem;
+  height: 13rem;
+  background-image: url(../../assets/axies-images/06_Popular\ Collection/box3/img-collection25.jpg);
   margin: 2rem 0rem 1rem 1rem;
   background-repeat: no-repeat;
   background-position: 25% 75%;
   background-size: cover;
   border-radius: 2rem;
+  transition: all 0.2s ease-out;
 }
 .collection__creator {
   display: flex;
@@ -250,5 +265,6 @@
   background-color: var(--card-background-color);
   cursor: pointer;
 }
-.collection__item:hover {
+.collection__item:hover .collection__img {
+  transform: scaleX(-1);
 }
