--- a/style/home/layout.css
+++ b/style/home/layout.css
@@ -19,6 +19,16 @@
   --light-font-color: #f3f3f3;
   --login-primary-background-color: rgba(25, 20, 65%);
   --login-secondary-background-color: rgba(17, 17, 19, 50%);
+  --font-xs:1.2rem;
+  --font-s: 1.5rem;
+  --font-m: 2rem;
+  --font-l: 3rem;
+  --font-xl: 4rem;
+  --font-xxl: 7rem; 
+  --avatar-size: 7rem;
+  --avatar-radius: 2rem;
+  --card-radius: 1.5rem;
+  --circle-radius: 4rem;
 }
 
 .light-mode {
@@ -33,6 +43,16 @@
   --light-font-color: #555555;
   --login-primary-background-color: rgba(25, 20, 65%);
   --login-secondary-background-color: rgba(17, 17, 19, 50%);
+  --font-xs:1.2rem;
+  --font-s: 1.5rem;
+  --font-m: 2rem;
+  --font-l: 3rem;
+  --font-xl: 4rem;
+  --font-xxl: 7rem; 
+  --avatar-size: 7rem;
+  --avatar-radius: 2rem;
+  --card-radius: 1.5rem;
+  --circle-radius: 4rem;
 }
 
 html {
@@ -87,6 +107,19 @@ a {
   -webkit-transition: all 0.3s ease;
 }
 
+btn {
+  font-family: inherit;
+  text-overflow: none;
+  font-size: 1.5rem;
+  padding: 1rem 3rem;
+  border-radius: 2rem;
+  outline: 0;
+  border: none;
+  box-shadow: none;
+  transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+}
+
 .btn__primary {
   background-color: var(--primary-color);
   color: var(--light-color);
@@ -97,6 +130,17 @@ a {
   background-color: var(--primary-color);
   color: var(--light-color);
   box-shadow: inset 0 0 0 0.1rem var(--font-accent-color);
+}
+
+.btn__long{
+  padding: 1rem ;
+  background-color: transparent;
+  border: 1px solid var(--light-color);
+  color: var(--font-primary-color);
+}
+
+.btn__long:hover{
+  background-color: var(--accent-color);
 }
 
 .btn__primary:hover {
@@ -112,6 +156,13 @@ a {
 .secondary-text {
   color: var(--font-accent-color);
   font-family: inherit;
+}
+
+.btn-explore{
+  width: 50%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .likes {
