--- a/style/home/layout.css
+++ b/style/home/layout.css
@@ -21,6 +21,7 @@
   --login-secondary-background-color: rgba(17, 17, 19, 50%);
   --font-xs:1.2rem;
   --font-s: 1.5rem;
+  --font-ms:1.8rem;
   --font-m: 2rem;
   --font-l: 3rem;
   --font-xl: 4rem;
