--- a/style/home/layout.css
+++ b/style/home/layout.css
@@ -108,7 +108,7 @@ a {
   -webkit-transition: all 0.3s ease;
 }
 
-btn {
+.btn {
   font-family: inherit;
   text-overflow: none;
   font-size: 1.5rem;
