--- a/style/home/navbar.css
+++ b/style/home/navbar.css
@@ -38,17 +38,23 @@
   color: var(--light-color);
   cursor: pointer;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   transition: all 0.2s linear;
-  width: 15%;
+  width: 100%;
+  
+}
+
+.navbar__menu__item p{
+ letter-spacing:0.1rem
+
 }
 
 
 .menu__item--wrapper{
   display: flex;
   flex-direction: column;
-  width: 20%;
+  width: 100%;
 }
 
 
