--- a/style/home/footer.css
+++ b/style/home/footer.css
@@ -100,6 +100,13 @@ footer {
   transition: all 0.1s linear;
 }
 
+.footer__links a:hover{
+  color: var(--light-color);
+  border-radius: 62px;
+  background: #312547;
+  box-shadow: 0px 12px 5px 7px rgba(0,0,0,0.1);
+}
+
 @media (max-width: 90rem) {
   .social {
     display: flex;
