--- a/style/home/hero.css
+++ b/style/home/hero.css
@@ -12,7 +12,8 @@
 
 .hero__title {
   color: var(--light-color);
-  font-size: 5rem;
+  font-size: 6rem;
+  z-index: 10;
 }
 
 .hero__item--left {
@@ -40,10 +41,10 @@
   animation: title 2s infinite linear;
 }
 
-.hero__item--left h1 {
+/* .hero__item--left h1 {
   font-size: 7rem;
   z-index: 20;
-}
+} */
 
 .hero__item--left > * {
   margin: 1rem;
