--- a/style/home/seller.css
+++ b/style/home/seller.css
@@ -3,7 +3,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 25rem 0 20rem 0;
+  margin: 20rem 0 20rem 0;
+  /* background: red; */
 }
 
 .seller__title {
@@ -23,7 +24,7 @@
 }
 
 .seller__text > * {
-  margin: 0.5rem 0;
+  margin: 0.3rem 0;
 }
 
 .seller__text p {
@@ -37,16 +38,20 @@
 .seller__row--1 {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  gap: 1rem;
   margin: 1rem;
+  width: 100%;
 }
 .seller__row--2 {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  gap: 1rem;
   margin: 1rem;
+  width: 100%;
 }
 
 .seller__card {
@@ -54,7 +59,7 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  margin: 0 2.5rem;
+  /* margin: 0 2.5rem; */
   transition: all 0.1s linear;
 }
 
