--- a/style/home/auctions.css
+++ b/style/home/auctions.css
@@ -1,25 +1,25 @@
 #live-auctions {
-  margin: 35rem 0 0 0;
+  margin: 25rem 0 0 0;
 }
 
-.auctions__wrapper {
+/* .auctions__wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  /* width: 99%; */
-}
+  width: 500px;
+} */
 
 .auctions__title__wrapper {
   display: flex;
   justify-content: flex-start;
-  width: 100%;
+  width: 90%;
 }
 
 .auctions__title{
   display: flex;
   justify-content: flex-start;
-  width: 50%;
+  width: 100%;
 }
 
 .auctions__title h2 {
@@ -35,7 +35,7 @@
   cursor: pointer;
 }
 
-.auctions__items {
+/* .auctions__items {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -43,40 +43,22 @@
   background-color: var(--secondary-background-color);
   border-radius: 1.5rem;
   width: 99%;
-}
+} */
 
-.auctions__items::before {
-  content: url(../../assets/axies-images/03_Live\ Auctions/circle-chevron-left-solid.svg);
-  cursor: pointer;
-  display: inline-block;
-  min-width: 5rem;
-  max-width: 10rem;
-  position: relative;
-  left: 1rem;
-}
 
-.auctions__items::after {
-  content: url(../../assets/axies-images/03_Live\ Auctions/circle-chevron-right-solid.svg);
-  cursor: pointer;
-  display: inline-block;
-  min-width: 5rem;
-  max-width: 10rem;
-  position: relative;
-  left: -1rem;
-}
 
 .auctions__item {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 5rem 2rem;
+  /* margin: 5rem 2rem; */
   color: var(--light-font-color);
   background-color: var(--card-background-color);
   padding: 2rem 1rem;
   border-radius: 2rem;
   transition: all 0.2s linear;
-  width: 24%;
+  width: 200x;
 }
 
 .auctions__creator__wrapper{
@@ -305,4 +287,8 @@ font-size: var(--font-xs);
 .btn__primary:hover {
   background-color: var(--accent-color);
   color: var(--light-color);
+}
+
+.swiper {
+  width: 1200px;
 }
