--- a/style/home/hero.css
+++ b/style/home/hero.css
@@ -122,7 +122,7 @@
 .hero__planet {
   position: relative;
   top: 90%;
-  left: -20%;
+  left: 10%;
   /* transition: all 1s linear; */
   animation: planet infinite 10s ease-in-out;
   z-index: -20;
@@ -205,12 +205,12 @@
 }
 
 .hero__wrapper--2 {
-  position: relative;
+  /* position: relative; */
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  top: 27rem;
+  /* top: 27rem; */
 }
 
 .hero__menu i {
